Prevent jumping text on Home screen on load

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,6 +8,10 @@
   margin: 16px 0 28px 0;
 }
 
+.splash-logo-is-loading {
+  display: none;
+}
+
 @media (max-width: 575px) {
   .splash-logo {
     max-width: 400px;
